// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-node should add a new blogpost and update linkedNodes 1`] = `
Object {
  "author___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "body___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrybodyTextNode",
  "children": Array [
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrydescriptionTextNode",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrybodyTextNode",
  ],
  "contentful_id": "1dHS3UzOqupJZY7AyeDc6s",
  "createdAt": "2020-06-03T14:22:37.720Z",
  "description___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrydescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___1aaRo2sQbdfWnG8iNvnkH3___Asset",
  "id": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry",
  "internal": Object {
    "contentDigest": "2020-06-03T14:22:37.720Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "en-US",
  "parent": "Blog Post",
  "publishDate": "2020-04-01T00:00+02:00",
  "slug": "integration-tests",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
    "type": "Entry",
  },
  "title": "Integration tests",
  "updatedAt": "2020-06-03T14:22:37.720Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry",
  ],
  "children": Array [
    "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___EntryshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___EntryshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 3`] = `
Object {
  "author___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "body___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nlbodyTextNode",
  "children": Array [
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nldescriptionTextNode",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nlbodyTextNode",
  ],
  "contentful_id": "1dHS3UzOqupJZY7AyeDc6s",
  "createdAt": "2020-06-03T14:22:37.720Z",
  "description___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nldescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___1aaRo2sQbdfWnG8iNvnkH3___Asset___nl",
  "id": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:22:37.720Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "nl",
  "parent": "Blog Post",
  "publishDate": "2020-04-01T00:00+02:00",
  "slug": "integration-tests",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
    "type": "Entry",
  },
  "title": "Integration tests",
  "updatedAt": "2020-06-03T14:22:37.720Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 4`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry___nl",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry___nl",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry___nl",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nl",
  ],
  "children": Array [
    "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nlshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 1`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry",
  ],
  "children": Array [
    "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___EntryshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___EntryshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry___nl",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry___nl",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry___nl",
  ],
  "children": Array [
    "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nlshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should update a blogpost 1`] = `
Object {
  "author___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "body___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrybodyTextNode",
  "children": Array [
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrydescriptionTextNode",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrybodyTextNode",
  ],
  "contentful_id": "1dHS3UzOqupJZY7AyeDc6s",
  "createdAt": "2020-06-03T14:22:37.720Z",
  "description___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrydescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___1aaRo2sQbdfWnG8iNvnkH3___Asset",
  "id": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry",
  "internal": Object {
    "contentDigest": "2020-06-03T14:27:24.359Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "en-US",
  "parent": "Blog Post",
  "publishDate": "2020-05-15T00:00+02:00",
  "slug": "hello-world-1234",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
    "type": "Entry",
  },
  "title": "Hello world 1234",
  "updatedAt": "2020-06-03T14:27:24.359Z",
}
`;

exports[`gatsby-node should update a blogpost 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry",
  ],
  "children": Array [
    "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___EntryshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___EntryshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should update a blogpost 3`] = `
Object {
  "author___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "body___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nlbodyTextNode",
  "children": Array [
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nldescriptionTextNode",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nlbodyTextNode",
  ],
  "contentful_id": "1dHS3UzOqupJZY7AyeDc6s",
  "createdAt": "2020-06-03T14:22:37.720Z",
  "description___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nldescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___1aaRo2sQbdfWnG8iNvnkH3___Asset___nl",
  "id": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:27:24.359Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "nl",
  "parent": "Blog Post",
  "publishDate": "2020-05-15T00:00+02:00",
  "slug": "hello-world-1234",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
    "type": "Entry",
  },
  "title": "Hello world 1234",
  "updatedAt": "2020-06-03T14:27:24.359Z",
}
`;

exports[`gatsby-node should update a blogpost 4`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry___nl",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry___nl",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry___nl",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nl",
  ],
  "children": Array [
    "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nlshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node stores rich text as raw with references attached 1`] = `
Array [
  "ahntqop9oi7x___7oHxo6bs0us9wIkq27qdyK___Entry",
  "ahntqop9oi7x___6KpLS2NZyB3KAvDzWf4Ukh___Entry",
  "ahntqop9oi7x___4ZQrqcrTunWiuNaavhGYNT___Asset",
]
`;

exports[`gatsby-node stores rich text as raw with references attached 2`] = `
Array [
  "ahntqop9oi7x___7oHxo6bs0us9wIkq27qdyK___Entry___nl",
  "ahntqop9oi7x___6KpLS2NZyB3KAvDzWf4Ukh___Entry___nl",
  "ahntqop9oi7x___4ZQrqcrTunWiuNaavhGYNT___Asset___nl",
]
`;
